Fixes for about page enter animation flicker, removed contact item in header

--- a/app/src/scss/_partials/header.scss
+++ b/app/src/scss/_partials/header.scss
@@ -2,8 +2,8 @@
 
 /*header*/
 .header-bar{
-	transition-duration: 0.25s;
-	transition-property: transform;
+	transition-duration: 1s;
+	transition-property: transform,background-color;
 	position: fixed;
 	background-color: $grey;
 	color: $pink;
